animation on mobile nav fixed

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap"); */
-
 .Header__main {
   position: relative;
   margin: 0 auto;
@@ -82,11 +80,11 @@
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 0.125rem;
-    animation: pulsating 6s ease-in-out 1s forwards;
-    -webkit-animation: pulsating 6s ease-in-out 1s forwards;
-    -ms-animation: pulsating 6s ease-in-out 1s forwards;
-    -moz-animation: pulsating 6s ease-in-out 1s forwards;
-    -o-animation: pulsating 6s ease-in-out 1s forwards;
+    animation: pulsating 6s ease-in-out 0.5s forwards;
+    -webkit-animation: pulsating 6s ease-in-out 0.5s forwards;
+    -ms-animation: pulsating 6s ease-in-out 0.5s forwards;
+    -moz-animation: pulsating 6s ease-in-out 0.5s forwards;
+    -o-animation: pulsating 6s ease-in-out 0.5s forwards;
   }
 
   .Header__neon_container {
