--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -18,12 +18,14 @@
   font-weight: 500;
   height: 50%;
 }
+
+
 @media(min-width: 600px){
-.Navigation__list_link:hover{
+/* .Navigation__list_link:hover{
   font-weight: 400;
   color: var(--main-black);
   cursor: pointer;
-}
+} */
 }
 
 .Navigation__list_link.Link_scroll {
