--- a/src/components/navigationMobile/navigationMobile.module.css
+++ b/src/components/navigationMobile/navigationMobile.module.css
@@ -12,7 +12,9 @@
   justify-content: center;
   z-index: 5;
   transition: all 0.2s linear;
+  -webkit-transition: all 0.2s linear;
   transform-origin: left;
+  border: 1px solid blue;
 }
 
 .NavigationMobile__layout ul {
@@ -31,17 +33,20 @@
 
 .NavigationMobile__layout_close {
   width: 100%;
-  height: 35%;
-  background-color: var(--primary_white);
-  position: absolute;
+  height: auto;
+  background-color: var(--main_white);
+  position: fixed;
+  top: 6.25rem;
+  left: -100%;
+  border-bottom: 2px solid var(--main_black);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  top: 6.25rem;
-  left: -100%;
   z-index: 5;
-  transition: all 0.1s linear;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s linear;
+  transform-origin: left;
 }
 
 .NavigationMobile__layout_close ul {
